added mongoDB changes and import React changes to fix signup

--- a/uc1/.env
+++ b/uc1/.env
@@ -1,1 +1,1 @@
-MURL=mongodb+srv://crmlogin:crmlogin@cluster0.yahsp.mongodb.net/ecommerce?retryWrites=true&w=majority
+MURL=mongodb+srv://mongoadmin:mongoadmin@cluster0.exxx1cv.mongodb.net/test?retryWrites=true&w=majority
