--- a/uc2/.env
+++ b/uc2/.env
@@ -1,1 +1,1 @@
-MURL=mongodb+srv://crmlogin:crmlogin@cluster0.yahsp.mongodb.net/ecommerce?retryWrites=true&w=majority
+MURL=mongodb+srv://mongoadmin:mongoadmin@cluster0.exxx1cv.mongodb.net/test?retryWrites=true&w=majority
