--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,7 +6,7 @@ RUN npm i
 RUN npm run build
 ENV NODE_ENV production
 EXPOSE 3000
-CMD ["npx","serve","build"]
+CMD ["npm","start"]
 # FROM nginx:1.21.0-alpine as production
 
 # COPY --from=builder /app/build /usr/share/nginx/html
